# rivet

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  build.rs  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  phase10-tasks.md  phase3-tasks.md  phase4-tasks.md  phase5-tasks.md  phase6-tasks.md  phase7-tasks.md  phase8-tasks.md  phase9-tasks.md
src/: app.rs  error.rs  languages.rs  main.rs  theme.rs
src/editor/: mod.rs
src/editor/scintilla/: messages.rs  mod.rs
src/platform/: mod.rs
src/platform/win32/: dialogs.rs  dpi.rs  mod.rs  window.rs
src/search/: mod.rs
src/session/: mod.rs
src/ui/: mod.rs  tabs.rs
