[package]
name = "rivet"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "A simple, fast, and correct text editor for Windows"
readme = "README.md"

[[bin]]
name = "rivet"
path = "src/main.rs"

# ── Runtime dependencies ──────────────────────────────────────────────────────
[dependencies]
# Win32 / WinRT bindings. Only the features we actually use are listed here;
# add new features in the phase that first references the corresponding type.
# Phase 1 declares the dependency; Phase 2 starts consuming the types.
[dependencies.windows]
version  = "0.58"
features = [
    "Win32_Foundation",            # HWND, HINSTANCE, BOOL, LRESULT, RECT, …
    "Win32_Graphics_Gdi",          # HDC, HBRUSH, painting primitives
    "Win32_System_LibraryLoader",  # LoadLibraryW, GetProcAddress, FreeLibrary
    "Win32_UI_Controls",           # InitCommonControlsEx, status bar (Phase 2b)
    "Win32_UI_Controls_Dialogs",   # GetOpenFileNameW, GetSaveFileNameW (Phase 3)
    "Win32_UI_HiDpi",              # SetProcessDpiAwarenessContext, GetDpiForWindow (Phase 8)
    "Win32_Graphics_Dwm",          # DwmSetWindowAttribute — dark title bar (Phase 8)
    "Win32_UI_WindowsAndMessaging",# CreateWindowExW, RegisterClassExW, MSG, …
]

[dependencies.serde]
version  = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

# ── Release profile ──────────────────────────────────────────────────────────
[profile.release]
opt-level = 3
strip = true          # strip symbols → smaller binary
lto = true            # link-time optimisation
codegen-units = 1     # single CG unit for best optimisation
panic = "abort"       # no unwinding machinery; smaller + faster
